VERSION SIN  USER FALTA COORDINAR ALGUNAS COSAS EN COORDINADOR, PERO YA ESTA SEPARADO STUDENT Y COMPANY